[project]
name = "session-insights-tools"
version = "0.1.0"
description = "session-insights スキルの決定論収集 CLI（セッション JSONL・設定の読み出し）"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
]

# スキルをプラグインとして分離しても、`uv run --project <skill-dir>` で
# requires-python に沿った .venv を skill ディレクトリ直下に用意して実行する。
# 配布物ではないので package 化しない。
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["scripts"]
pythonpath = ["scripts"]
